--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,4 +68,4 @@ jms_security_extra:
 fos_user:
   db_driver: orm
   firewall_name: main
-  user_class: SympleBlog\UserBundle\Entity\User
+  user_class: Symple\UserBundle\Entity\User
